--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
+removed_sources:
+  Date-Manip-6.24.tar.gz: 19d51f50862b04ace5667cbead4087b1b70218e6
 sources:
-  "Date-Manip-6.24.tar.gz": 19d51f50862b04ace5667cbead4087b1b70218e6
+  Date-Manip-6.43.tar.gz: 2a262f5db603125914fe644e242bb91b662e7a03
