Updated to 6.45 (by updates_builder)

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,5 @@
 removed_sources:
   Date-Manip-6.24.tar.gz: 19d51f50862b04ace5667cbead4087b1b70218e6
-sources:
   Date-Manip-6.43.tar.gz: 2a262f5db603125914fe644e242bb91b662e7a03
+sources:
+  Date-Manip-6.45.tar.gz: 6b4b5c30d975102f077e8bbcf21c04e5a341c481
