--- a/.abf.yml
+++ b/.abf.yml
@@ -3,5 +3,6 @@ removed_sources:
   Date-Manip-6.43.tar.gz: 2a262f5db603125914fe644e242bb91b662e7a03
   Date-Manip-6.45.tar.gz: 6b4b5c30d975102f077e8bbcf21c04e5a341c481
   Date-Manip-6.47.tar.gz: 6a35113919965714385fcfef3c88cf0feff1e1bc
-sources:
   Date-Manip-6.48.tar.gz: 6b260c9f3c04268b03880743f237eb88f71c031a
+sources:
+  Date-Manip-6.49.tar.gz: 98685078b08509f2d954c1434b4ff8e5a6d04f33
